# finetune-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  memory.md  pyproject.toml
.github/workflows/: tests.yml
.streamlit/: config.toml
src/distillery/: __init__.py  __main__.py  agent.py  cli.py  critic.py  critic_execution.py  dataset_generator.py  evaluator.py  exporter.py  planner.py  schemas.py  utils.py
src/distillery/llm/: __init__.py  base.py  mock.py  openai.py
src/distillery/memory/: __init__.py  local_store.py  redis_store.py  store.py
src/distillery/ui/: __init__.py  app.py
src/finetune_agent/: __init__.py  __main__.py  agent.py  cli.py  critic.py  dataset_generator.py  evaluator.py  exporter.py  planner.py  schemas.py  utils.py
src/finetune_agent/llm/: __init__.py  ollama.py  openai.py
src/finetune_agent/memory/: local_store.py  redis_store.py  store.py
src/finetune_agent/ui/: __init__.py  app.py
tests/: __init__.py  test_agent_pipeline.py  test_critic.py  test_critic_execution.py  test_evaluator.py  test_exporter.py  test_generator.py  test_llm_factory.py  test_ollama.py
