[project]
name = "finetune-agent"
version = "0.1.0"
description = "An agentic AI assistant for finetuning engineering that generates action plans and training datasets"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Finetune Agent Team" }]

dependencies = [
    "pydantic>=2.0.0",
    "scikit-learn>=1.3.0",
    "rich>=13.0.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "streamlit>=1.30.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
finetune-agent = "finetune_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finetune_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
